# Mini-Boss

./: .dockerignore  .env.template  .flake8  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  404.html  BULLETIN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_BULLETIN.md  Dockerfile  LICENSE  README.md  boss_settings.yaml  docker-compose.yml  env_setup.sh  index.html  main.py  mini-boss-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  run.bat  run.sh  run_docker.bat  run_docker.sh  run_docker_continuous.sh  run_miniboss.sh  run_miniboss_continuous.sh  run_miniboss_gpt3.bat  run_miniboss_gpt3.sh  search.html  setup.sh  setup_env.sh  setup_with_prompt.sh
.github/: FUNDING.yaml
.github/ISSUE_TEMPLATE/: 1.bug.yml  2.feature.yml
.github/workflows/: ci.yml  docker-cache-clean.yml  docker-ci.yml  docker-release.yml  documentation-release.yml  sponsors_readme.yml  update_submodule_cron.yml
benchmark/: benchmark_miniboss_with_difficult_user.py
configuration/memory/: index.html
docs/: index.md  plugins.md  setup.md
docs/configuration/: memory.md
docs/docs/: index.md  plugins.md  setup.md  usage.md
miniboss/: __main__.py  app.py  buddy_app.py  cli.py  configurator.py  logs.py  main.py  plugins.py  setup.py  singleton.py  spinner.py  utils.py
miniboss/agent/: __init__.py  buddy.py  buddy_manager.py
plugins/: index.html
run_scripts/: run.bat  run_continuous.sh  run_docker.sh  run_docker_continuous.bat  run_docker_gpt3.sh  setup.sh
search/: search_index.json
setup/: index.html
usage/: index.html
(+40 files in other folders)
