[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniboss"
version = "0.0.1"
authors = [
  { name="MiniBossGPT", email="minibossgpt@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "Auto-GPT Orchestrator for Scalable AI-powered Task Management"

[project.urls]
"Homepage" = "https://github.com/MiniBossGPT/Mini-Boss"
"Bug Tracker" = "https://github.com/MiniBossGPT/Mini-Boss"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
packages = ["miniboss"]
extend-exclude = '.+/(dist|.venv|venv|build)/.+'


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
skip = '''
    .tox
    __pycache__
    *.pyc
    .env
    venv*/*
    .venv/*
    reports/*
    dist/*

'''
